--- a/ml/labs/10_TensorFlow101_Word2Vec/10_TensorFlow101_Word2Vec.org
+++ b/ml/labs/10_TensorFlow101_Word2Vec/10_TensorFlow101_Word2Vec.org
@@ -92,16 +92,12 @@ The benefits of using TensorFlow include:
 -  Large community
 
 * Graphs and Sessions[[Graphs-and-Sessions][¶]]
-  :PROPERTIES:
-  :CUSTOM_ID: Graphs-and-Sessions
-  :END:
 
-In TensorFlow, the definition of computations is separated from their execution.
-First, we specify the operations by building a data flow graph in Python. Next,
-TensorFlow runs the graph with a =Session= using optimized C++ code. Let's
-import tensorflow first and create a session.
+In TensorFlow, *the definition of computations is separated from their
+execution*. First, we specify the operations by building a data flow graph in
+Python. Next, TensorFlow runs the graph with a =Session= using optimized C++
+code. Let's import tensorflow first and create a session.
 
-In [1]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     import tensorflow as tf
@@ -109,12 +105,11 @@ In [1]:
 #+END_SRC
 
 *** Tensors[[Tensors][¶]]
-    :PROPERTIES:
-    :CUSTOM_ID: Tensors
-    :END:
 
 A *Tensor* is an array of any dimension. The *rank* of a tensor refers to the
 number of dimensions it has.
+
+注意: Tensor 的维度是从一对中括号 "[]" 内部开始算的, 如果没有中括号是常数.
 
 A rank 0 tensor with shape [ ]:
 
@@ -126,6 +121,12 @@ A vector - a rank 1 tensor with shape [3]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     [1.0, 2.0, 3.0]
+#+END_SRC
+
+A matrix - a rank 2 tensor with shape [1, 3]
+
+#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+    [[1.0, 2.0, 3.0]]
 #+END_SRC
 
 A matrix - a rank 2 tensor with shape [2, 3]
@@ -143,9 +144,6 @@ A rank 3 tensor with shape [2,1,3]
 #+END_SRC
 
 *** Constants[[Constants][¶]]
-    :PROPERTIES:
-    :CUSTOM_ID: Constants
-    :END:
 
 We can create constants by passing lists or constants into the =tf.constant=
 function.
@@ -154,7 +152,6 @@ function.
     tf.constant(value, dtype=None, shape=None, name='Const', verify_shape=False)
 #+END_SRC
 
-In [2]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     # constant of 1d tensor (vector)
@@ -162,13 +159,11 @@ In [2]:
     a.eval()
 #+END_SRC
 
-Out[2]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     array([2, 2], dtype=int32)
 #+END_SRC
 
-In [3]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     # constant of 2x2 tensor (matrix)
@@ -176,7 +171,6 @@ In [3]:
     b.eval()
 #+END_SRC
 
-Out[3]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     array([[0, 1],
@@ -185,7 +179,6 @@ Out[3]:
 
 We can also create tensors of a specific value.
 
-In [4]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     c = tf.zeros([2, 3], tf.int32) # [[0, 0, 0], [0, 0, 0]]
@@ -213,7 +206,6 @@ Out[5]:
            [1, 1, 1]], dtype=int32)
 #+END_SRC
 
-In [6]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     # create a tensor containing zeros, with shape and type as input_tensor
@@ -222,7 +214,6 @@ In [6]:
     e.eval()
 #+END_SRC
 
-Out[6]:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     array([[ 0.,  0.],
@@ -437,6 +428,11 @@ In [12]:
         os.makedirs(logs_dir)
 #+END_SRC
 
+#+RESULTS:
+:RESULTS:
+# Out[19]:
+:END:
+
 To evaluate a graph, a =Session= is used. A TensorFlow session places
 operations onto devices such as CPUs and GPUs and runs them, and
 computes variable values.
@@ -449,6 +445,11 @@ In [13]:
     print(sess.run(node3))
     sess.close() # close the session
 #+END_SRC
+
+#+RESULTS:
+:RESULTS:
+0 - 25612674-0ab0-43b0-bdf3-799714a52a3f
+:END:
 
 #+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
     [3.0, 4.0]
