--- a/ml/labs/13_Sentiment_Analysis_and_Neural_Machine_Translation/13_Sentiment_Analysis_and_Neural_Machine_Translation.org
+++ b/ml/labs/13_Sentiment_Analysis_and_Neural_Machine_Translation/13_Sentiment_Analysis_and_Neural_Machine_Translation.org
@@ -13,38 +13,51 @@ There are several RNN related layers already implemented in
 [[https://www.tensorflow.org/api_guides/python/contrib.rnn][tensorflow.contrib.rnn]]. To construct a *simple rnn*, we should first define the
 *cell* and apply it into the network. Here is a dummy example:
 
-In [1]:
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
+  import os
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
-    import os
-
-    os.environ["CUDA_VISIBLE_DEVICES"] = '0'
+  # os.environ["CUDA_VISIBLE_DEVICES"] = '0'
 #+END_SRC
 
-In [2]:
+#+RESULTS:
+:RESULTS:
+# Out[1]:
+:END:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
-    import tensorflow as tf
-    import numpy as np
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
+  import numpy as np
+  import tensorflow as tf
 
-    simple_cell = tf.contrib.rnn.BasicRNNCell(num_units=128)
-    lstm_cell = tf.contrib.rnn.LSTMCell(
-        num_units=128)  # you can also use advanced LSTM or GRU cell
-    outputs, state = tf.nn.dynamic_rnn(
-        lstm_cell,
-        tf.constant(np.float32(np.random.rand(4, 12, 300))),
-        dtype=tf.float32)
+  simple_cell = tf.contrib.rnn.BasicRNNCell(num_units=128)
+  lstm_cell = tf.contrib.rnn.LSTMCell(
+      num_units=128)  # you can also use advanced LSTM or GRU cell
+  outputs, state = tf.nn.dynamic_rnn(
+      lstm_cell,
+      tf.constant(np.float32(np.random.rand(4, 12, 300))),
+      dtype=tf.float32)
 
-    print(outputs)
-    print(state)
+  print(outputs)
+  print(state)
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
-    /home/yesray0216/anaconda3/lib/python3.6/importlib/_bootstrap.py:205: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6
-      return f(*args, **kwds)
-#+END_SRC
+#+RESULTS:
+:RESULTS:
+# Out[2]:
+:END:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+RESULTS:
+:RESULTS:
+0 - e9fd9808-a968-4459-94a2-7c8d8633e82c
+:END:
+
+#+BEGIN_QUOTE
+  /home/yesray0216/anaconda3/lib/python3.6/importlib/_bootstrap.py:205:
+    RuntimeWarning: compiletime version 3.5 of module
+    'tensorflow.python.framework.fast_tensor_util' does not match runtime
+    version 3.6 return f(*args, **kwds)
+#+END_QUOTE
+
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     Tensor("rnn/transpose:0", shape=(4, 12, 128), dtype=float32)
     LSTMStateTuple(c=<tf.Tensor 'rnn/while/Exit_2:0' shape=(4, 128) dtype=float32>, h=<tf.Tensor 'rnn/while/Exit_3:0' shape=(4, 128) dtype=float32>)
 #+END_SRC
@@ -56,7 +69,7 @@ judege it's *a favorable comment or not*.
 
 In [3]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import pandas as pd
 
     train_csv = pd.read_csv('dataset/imdb/train.csv')
@@ -65,7 +78,7 @@ In [3]:
     print(train_csv.head(n=10))
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
                                                   review  sentiment
     0  remarkable fact participation klaus kinski pla...          0
     1  bought movie dvd watched first time night fan ...          1
@@ -85,14 +98,14 @@ ourself, we use an *existing Word2vec* by [[https://spacy.io/][spaCy]] this time
 use spaCy, you can install it via pip and don't forget to *download English
 model*.
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
         pip install spacy
         python -m spacy download en
 #+END_SRC
 
 In [4]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import spacy
 
     nlp = spacy.load('en')
@@ -109,7 +122,7 @@ In [4]:
                               word_banana.similarity(word_mac)))
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     apple vs banana: 0.583184
     apple vs mac: 0.574916
     banana vs mac: 0.243292
@@ -118,7 +131,7 @@ In [4]:
 Just like [[https://nthu-datalab.github.io/ml/competitions/01_Response_Selection/01_Response_Selection.html][Competition01]], we should do some text preprocessing.
 
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     def remove_unknown_words(csv):
       dat = []
       n = len(csv)
@@ -137,7 +150,7 @@ Just like [[https://nthu-datalab.github.io/ml/competitions/01_Response_Selection
     print(train_dat[:3])
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     [['remarkable fact participation klaus kinski plays priest ask bad bad movie overall', 0], ['bought movie watched first time night fan tolkien work years ever since got high school grow movie perhaps mother kept away definitely children bad graphic sense themes would go right year olds heads overall animation excellent considering made thought story followed book fairly well loose sense bothered add another minutes tack return king parts would made ultimate movie bothered abrupt end heard return king sucked bothered even bad one great animation film might garnered higher vote give hope peter jackson books justice new live action', 1], ['movie proves judge movie awesome artwork cover also goes show learn movie buy get someone christmas beginning movie actually looks somewhat promising well meet characters pumpkin jack old guy street brings college co eds book full witch spells leaves annual haunted house movie takes place drinking fighting soft core porn action movie finally takes place hour overall end predictable reminiscent soft core porn movie probably best viewed group friends nothing better good movie make fun first time viewers really fun making predictions order people die', 0]]
 #+END_SRC
 
@@ -155,7 +168,7 @@ each batch has *as similar length as possible*, preventing lots of paddings.
 
 In [6]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     class BatchGenerator:
 
       def __init__(self, dat, batch_size):
@@ -193,7 +206,7 @@ In [6]:
 
 In [7]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     batch = BatchGenerator(train_dat, 32)
 
     xs, ys, rv = batch.get(0)
@@ -202,7 +215,7 @@ In [7]:
     print(rv[0])
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     [[ 0.2071     -0.47656     0.15479    ..., -0.26411    -0.16523001  0.23532   ]
      [-0.50777     0.24716    -0.15457    ...,  0.023132   -0.10737    -0.089831  ]
      [-0.42625001  0.44310001 -0.34516999 ..., -0.4303     -0.068851    0.12875   ]
@@ -222,7 +235,7 @@ with aother one.
 
 In [8]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     class SentimentReviewRNN:
 
       def __init__(self):
@@ -254,7 +267,7 @@ In [8]:
               labels=tf.argmax(self.groundtruths, axis=1),
               predictions=tf.argmax(self.outputs, axis=1))
 
-        self.sess = tf.Session()
+        self.sess = tf.Session Lec13()
         self.sess.run(tf.global_variables_initializer()
                      )  # don't forget to initial all variables
         self.saver = tf.train.Saver(
@@ -287,7 +300,7 @@ In [8]:
 
 In [9]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     # hyperparameter of our network
     EPOCHS = 15
     BATCH_SIZE = 128
@@ -295,7 +308,7 @@ In [9]:
 
 In [10]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     train_batch = BatchGenerator(train_dat, BATCH_SIZE)
     test_batch = BatchGenerator(test_dat, BATCH_SIZE)
 
@@ -305,7 +318,7 @@ In [10]:
 
 In [11]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     tf.reset_default_graph()
     model = SentimentReviewRNN()
 #+END_SRC
@@ -316,7 +329,7 @@ After preparing batch and model, we can train it and see how the performance is.
 
 In [12]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     rec_loss = []
 
     for e in range(EPOCHS):  # train for several epochs
@@ -343,7 +356,7 @@ The loss curve and accuracy curve are both pretty good!
 
 In [13]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     rec_loss = np.load('./model/rnn/rec_loss.npy')
 
     import matplotlib.pyplot as plt
@@ -358,17 +371,17 @@ For testing, we can *just restore* trained weight.
 
 In [14]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     model.restore(EPOCHS)
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     INFO:tensorflow:Restoring parameters from model/rnn/rnn_15.ckpt
 #+END_SRC
 
 In [15]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     accuracy_test = 0
 
     for b in range(n_test):
@@ -382,13 +395,13 @@ In [15]:
     print('Test: %.4f' % (accuracy_test))
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     Test: 0.8456
 #+END_SRC
 
 In [16]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     %reset -sf
 #+END_SRC
 
@@ -410,7 +423,7 @@ to solve language translation. Here we use [[http://www.lrec-conf.org/proceeding
 
 In [17]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import os
 
     os.environ["CUDA_VISIBLE_DEVICES"] = '0'
@@ -420,7 +433,7 @@ Take a look at dataset (TA has preprocessed first).
 
 In [18]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import numpy as np
 
     en_corpus = np.load('./dataset/translate/enCorpus.npy')
@@ -438,7 +451,7 @@ In [18]:
       print('')
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     <BEG> all that remains for me to do is to say <UNK> <END>
     <BEG> 我 剩下 要 做 的 事 就是 <UNK> 了 <END>
 
@@ -457,7 +470,7 @@ token.
 
 In [19]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     en_corpus_clean = []
     ch_corpus_clean = []
 
@@ -475,7 +488,7 @@ In [19]:
       print('')
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     <BEG> its my father who came here to look for me this morning <END>
     <BEG> 上午 来 找 我 的 是 我 父亲 <END>
 
@@ -500,7 +513,7 @@ means the *input and output should be a list* contains word batch.
 [[file:imgs/time_major.png]]
 
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     en_max_len = 0
     ch_max_len = 0
 
@@ -511,13 +524,13 @@ means the *input and output should be a list* contains word batch.
     print(en_max_len, ch_max_len)
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     32 32
 #+END_SRC
 
 In [21]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     class BatchGenerator:
 
       def __init__(self, en_corpus, ch_corpus, en_pad, ch_pad, en_max_len,
@@ -587,7 +600,7 @@ In [21]:
       print('')
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     have you applied any of the above strategies in your business <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>
     <BEG> 你 有没有 把 上面 的 任何 策略 用 在 你 自己 的 生意 上 <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>
     你 有没有 把 上面 的 任何 策略 用 在 你 自己 的 生意 上 <END> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>
@@ -619,13 +632,13 @@ legacy\_seq2seq, attention has been implemented also.
 
 In [22]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import tensorflow as tf
 #+END_SRC
 
 In [23]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     class MachineTranslationSeq2Seq:
 
       def __init__(self, en_max_len, ch_max_len, en_size, ch_size):
@@ -671,7 +684,7 @@ In [23]:
                   self.outputs, self.groundtruths, self.weights))
           self.optimizer = tf.train.AdamOptimizer(0.002).minimize(self.loss)
 
-        self.sess = tf.Session()
+        self.sess = tf.Session Lec13()
         self.saver = tf.train.Saver()
         self.sess.run(tf.global_variables_initializer())
 
@@ -727,7 +740,7 @@ In [23]:
 
 In [24]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     tf.reset_default_graph()
     model = MachineTranslationSeq2Seq(en_max_len, ch_max_len,
                                       len(en_vocab), len(ch_vocab))
@@ -735,7 +748,7 @@ In [24]:
 
 In [25]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     EPOCHS = 40
     BATCH_SIZE = 256
     batch_num = len(en_corpus_clean) // BATCH_SIZE
@@ -746,7 +759,7 @@ In [25]:
 
 In [26]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     rec_loss = []
     for e in range(EPOCHS):
       train_loss = 0
@@ -767,7 +780,7 @@ The loss curve is also good this time.
 
 In [27]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     rec_loss = np.load('./model/seq2seq/rec_loss.npy')
 
     import matplotlib.pyplot as plt
@@ -779,11 +792,11 @@ In [27]:
 
 
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     model.restore(EPOCHS)
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     INFO:tensorflow:Restoring parameters from model/seq2seq/seq2seq_40.ckpt
 #+END_SRC
 
@@ -800,7 +813,7 @@ translation result which is called *cherry pick*.
 
 In [29]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import nltk
 
     def cherry_pick(records, n, upper_bound=1.0):
@@ -819,7 +832,7 @@ In [29]:
 
 In [30]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     import random as rd
 
     records = []
@@ -855,7 +868,7 @@ In [30]:
       print('')
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     do you see that i am your friend
     你 把 我 当作 你 的 朋友 吗
     你 把 我 当作 你 的 朋友 吗
@@ -905,7 +918,7 @@ In [30]:
     现在 才 知道 这么 有用
 #+END_SRC
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     /home/yesray0216/anaconda3/lib/python3.6/site-packages/nltk/translate/bleu_score.py:490: UserWarning:
     Corpus/Sentence contains 0 counts of 3-gram overlaps.
     BLEU scores might be undesirable; use SmoothingFunction().
@@ -922,7 +935,7 @@ In [30]:
 
 In [31]:
 
-#+BEGIN_SRC ipython :tangle yes :session :exports code :async t :results raw drawer
+#+BEGIN_SRC ipython :tangle yes :session lec13 :exports code :async t :results raw drawer
     %reset -sf
 #+END_SRC
 
